ALPHA-v0.2.6 - Fixed missing dependencies - Fixed launch settings for vscode - Refactored the way windows and images are loaded in all script - Fixed first new team's starting values not being set correctly when Previous Season Finishing Position was unchanged.